wip: pause projet admin markets
